--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Hello, world!</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
-  <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <meta charset="UTF-8" />
+    <title>Hello, world!</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="" />
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
+
 <body>
-  <h1>Hello, world!</h1>
+    <header>
+        <nav class="nav">
+            <div class="nav__box-1">
+                <p>Genesis</p>
+            </div>
+            <div class="nav__box-2">
+                <ul>
+                    <li>
+                        Projects
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="section-1">
+            <div class="section-1__box-1">
+                <div class="section-1__box-1__grid-box-1">
+                    <p><strong>Shooting Stars</strong></p>
+                </div>
+                <div class="section-1__box-1__grid-box-2">
+                    <h1>
+                        Hello, I’m Bakhtiyar Sattarov,
+                        <span>product designer</span> with experience
+                        in studios and startups
+                    </h1>
+                </div>
+            </div>
+            <div class="section-1__box-2">
+                <div class="mini-container">
+                <div class="line"></div>
+                <p>Design is about progress</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
