finished first page

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <meta name="description" content="" />
     <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.5.1/css/all.css">
+    
 </head>
 
 <body>
     <header>
         <nav class="nav">
             <div class="nav__box-1">
-                <p>Genesis</p>
+                <h3>Genesis</h3>
             </div>
             <div class="nav__box-2">
                 <ul>
@@ -44,12 +47,174 @@
             </div>
             <div class="section-1__box-2">
                 <div class="mini-container">
-                <div class="line"></div>
-                <p>Design is about progress</p>
+                    <div class="line"></div>
+                    <p>Design is about progress</p>
+                </div>
+            </div>
+        </section>
+        <section class="section-2">
+            <div class="section-2__img-box-1">
+                <img src="/images/Rectangle.png" />
+            </div>
+            <div class="section-2__img-box-2">
+                <img src="/images/Rectangle-2.png" />
+            </div>
+            <div class="section-2__img-box-3">
+                <img src="/images/Rectangle-3.png" />
+            </div>
+            <div class="section-2__img-box-4">
+                <img src="/images/Rectangle-5.png" />
+            </div>
+            <div class="section-2__img-box-5">
+                <img src="/images/Rectangle-4.png" />
+            </div>
+            <div class="section-2__img-box-6">
+                <img src="/images/Rectangle-6.png" />
+            </div>
+            <div class="section-2__img-box-7">
+                <img src="/images/Rectangle-8.png" />
+            </div>
+            <div class="section-2__img-box-8">
+                <img src="/images/Rectangle-7.png" />
+            </div>
+            <div class="section-2__img-box-9">
+                <img src="/images/Rectangle-9.png" />
+            </div>
+            <div class="section-2__img-box-10">
+                <img src="/images/Rectangle-11.png" />
+            </div>
+            <div class="section-2__img-box-11">
+                <img src="/images/Rectangle-10.png" />
+            </div>
+            <div class="section-2__img-box-12">
+                <img src="/images/Rectangle-12.png" />
+            </div>
+        </section>
+        <section class="section-3">
+            <div class="section-3__box-1">
+                <h3>We love work hard and explore new things that’s why we cover lot of things. Check our service list
+                    and view details</h3>
+            </div>
+            <div class="section-3__box-2">
+                <ul>
+                    <li>
+                        Multimedia
+                    </li>
+                    <li>
+                        Interactive Design
+                    </li>
+                    <li>
+                        Branding
+                    </li>
+                </ul>
+            </div>
+            <div class="section-3__box-3">
+                <ul>
+                    <li>
+                        Creative design
+                    </li>
+                    <li>
+                        Packaging
+                    </li>
+                    <li>
+                        Coding
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section-4">
+            <div class="section-4__box-1">
+                <h3>
+                    Awwwards
+                </h3>
+            </div>
+            <div class="section-4__box-2">
+                <div class="section-4__box-2__box-1">
+                    <h4>Site of the day</h4>
+                </div>
+                <div class="section-4__box-2__box-2">
+                    <h4>Best navigation</h4>
+                </div>
+            </div>
+            <div class="section-4__box-3">
+                <div class="section-4__box-3__box-1">
+                    <h5>Genesis UI Kit</h5>
+                    <p>Application that helps to find nearest sport centres
+                    </p>
+                </div>
+                <div class="section-4__box-3__box-2">
+                    <h5>Genesis Template</h5>
+                    <p>Application that helps to find nearest sport centres
+                    </p>
+                </div>
+
+            </div>
+            <div class="section-4__box-4">
+                <div class="section-4__box-4__box-1">
+                    <h5>2018</h5>
+                </div>
+                <div class="section-4__box-4__box-2">
+                    <h5>2018</h5>
+                </div>
+            </div>
+        </section>
+        <section class="section-5">
+            <div class="section-5__box-1">
+                <h3>
+                    CSSDesignAwards
+                </h3>
+            </div>
+            <div class="section-5__box-2">
+                <div class="section-5__box-2__box-1">
+                    <h4>Site of the day</h4>
+                </div>
+                <div class="section-5__box-2__box-2">
+                    <h4>Best navigation</h4>
+                </div>
+            </div>
+            <div class="section-5__box-3">
+                <div class="section-5__box-3__box-1">
+                    <h5>Genesis UI Kit</h5>
+                    <p>Application that helps to find nearest sport centres
+                    </p>
+                </div>
+                <div class="section-5__box-3__box-2">
+                    <h5>Genesis Template</h5>
+                    <p>Application that helps to find nearest sport centres
+                    </p>
+                </div>
+
+            </div>
+            <div class="section-5__box-4">
+                <div class="section-5__box-4__box-1">
+                    <h5>2017</h5>
+                </div>
+                <div class="section-5__box-4__box-2">
+                    <h5>2016</h5>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="logo">
+            <h3>Genesis</h3>
+        </div>
+        <div class="anchortags">
+            <ul>
+                <li>
+                    Projects
+                </li>
+                <li>
+                    Contact
+                </li>
+            </ul>
+        </div>
+        <div class="social-media">
+            <i class="fa-brands fa-dribbble"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+    </footer>
 </body>
 
 </html>
