done with second page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="" />
     <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.5.1/css/all.css">
     
 </head>
@@ -22,7 +21,7 @@
             <div class="nav__box-2">
                 <ul>
                     <li>
-                        Projects
+                        <a href="/pages/projects.html">Projects</a>
                     </li>
                     <li>
                         Contact
@@ -202,7 +201,7 @@
         <div class="anchortags">
             <ul>
                 <li>
-                    Projects
+                    <a href="/pages/projects.html">Projects</a>
                 </li>
                 <li>
                     Contact
