half way done with contacts page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="/pages/projects.html">Projects</a>
                     </li>
                     <li>
-                        Contact
+                       <a href="pages/contacts.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -204,7 +204,7 @@
                     <a href="/pages/projects.html">Projects</a>
                 </li>
                 <li>
-                    Contact
+                    <a href="pages/contacts.html">Contact</a>
                 </li>
             </ul>
         </div>
