--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Hello, world!</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
-  <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../css/contacts.css" />
+    <meta charset="UTF-8" />
+    <title>Hello, world!</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="" />
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../css/contacts.css" />
 </head>
+
 <body>
-  <h1>Hello, world!</h1>
+    <header>
+        <nav class="nav">
+            <div class="nav__box-1">
+                <h3>Genesis</h3>
+            </div>
+            <div class="nav__box-2">
+                <ul>
+                    <li>
+                        <a href="projects.html">Projects</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="section-1">
+            <div class="section-1__box-1">
+                <div class="section-1__box-1__box-1">
+                    <h1>Full set of great
+                        features to make your
+                        product fresh</h1>
+                </div>
+                <div class="section-1__box-1__box-2">
+                    <p>Our favorite brands are our friends! We help them to achieve their goals, they help us to stay
+                        sharp.</p>
+                </div>
+            </div>
+            <div class="section-1__box-2">
+                <form>
+                    <input type="text" name="message" placeholder="Name" />
+                    <input type="email" name="message" placeholder="Email" />
+                    <input type="text" name="message" placeholder="Message" />
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </section>
+        <section class="section-2">
+            <img src="../images/Rectangle-8.png" alt="Walking Girl">
+
+        </section>
+    </main>
 </body>
+
 </html>
