--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,10 +20,10 @@
             <div class="nav__box-2">
                 <ul>
                     <li>
-                        <a href="/pages/projects.html">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        Contact
+                        <a href="contacts.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -112,10 +112,10 @@
         <div class="anchortags">
             <ul>
                 <li>
-                    <a href="/pages/projects.html">Projects</a>
+                    <a href="projects.html">Projects</a>
                 </li>
                 <li>
-                    Contact
+                    <a href="contacts.html">Contact</a>
                 </li>
             </ul>
         </div>
