--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -8,6 +8,8 @@
     <meta name="description" content="" />
     <link href="https://cdn.jsdelivr.net/npm/modern-normalize@v2.0.0/modern-normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/contacts.css" />
+    
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.5.1/css/all.css">
 </head>
 
 <body>
@@ -46,15 +48,36 @@
                     <input type="text" name="message" placeholder="Name" />
                     <input type="email" name="message" placeholder="Email" />
                     <input type="text" name="message" placeholder="Message" />
-                    <button type="submit">Submit</button>
+                    <div class="button-container">
+                        <button type="submit">Submit</button>
+                    </div>
                 </form>
             </div>
         </section>
         <section class="section-2">
-            <img src="../images/Rectangle-8.png" alt="Walking Girl">
+            <img src="../images/Map.png" alt="Walking Girl">
 
         </section>
     </main>
+    <footer>
+        <div class="logo">
+            <h3>Genesis</h3>
+        </div>
+        <div class="anchortags">
+            <ul>
+                <li>
+                    <a href="projects.html">Projects</a>
+                </li>
+                <li>
+                    <a href="contacts.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="social-media">
+            <i class="fa-brands fa-dribbble"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
 </body>
 
 </html>
