--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="nav">
             <div class="nav__box-1">
-                <h3>Genesis</h3>
+                <h3><a href="/index.html">Genesis</a></h3>
             </div>
             <div class="nav__box-2">
                 <ul>
