--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="nav">
             <div class="nav__box-1">
-                <h3>Genesis</h3>
+                <h3><a href="/index.html">Genesis</a></h3>
             </div>
             <div class="nav__box-2">
                 <ul>
@@ -24,7 +24,7 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="contacts.html">Contact</a>
+                        Contact
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
     </main>
     <footer>
         <div class="logo">
-            <h3>Genesis</h3>
+            <h3><a href="/index.html">Genesis</a></h3>
         </div>
         <div class="anchortags">
             <ul>
@@ -69,7 +69,7 @@
                     <a href="projects.html">Projects</a>
                 </li>
                 <li>
-                    <a href="contacts.html">Contact</a>
+                    Contact
                 </li>
             </ul>
         </div>
