--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,7 +20,7 @@
             <div class="nav__box-2">
                 <ul>
                     <li>
-                        <a href="projects.html">Projects</a>
+                        Projects
                     </li>
                     <li>
                         <a href="contacts.html">Contact</a>
@@ -107,12 +107,12 @@
     </main>
     <footer>
         <div class="logo">
-            <h3>Genesis</h3>
+            <h3><a href="/index.html">Genesis</a></h3>
         </div>
         <div class="anchortags">
             <ul>
                 <li>
-                    <a href="projects.html">Projects</a>
+                    Projects
                 </li>
                 <li>
                     <a href="contacts.html">Contact</a>
